<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity">

    <RadioGroup
        android:id="@+id/radiogroup2"
        android:layout_width="358dp"
        android:layout_height="210dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="205dp">

        <RadioButton
            android:id="@+id/opt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer1_1" />

        <RadioButton
            android:id="@+id/opt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer1_2" />

        <RadioButton
            android:id="@+id/opt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer1_3" />
    </RadioGroup>

    <TextView
        android:id="@+id/question"
        android:layout_width="347dp"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="43dp"
        android:text="@string/question1"/>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="169dp"
        android:text="Next" />
</RelativeLayout>