<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity3">

    <TextView
        android:id="@+id/question3"
        android:layout_width="313dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="62dp"
        android:text="@string/question3"/>

    <RadioGroup
        android:id="@+id/radiogroup3"
        android:layout_width="286dp"
        android:layout_height="111dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="220dp">

        <RadioButton
            android:id="@+id/options1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer3_1"/>

        <RadioButton
            android:id="@+id/options2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer3_2"/>

        <RadioButton
            android:id="@+id/options3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer3_3"/>
    </RadioGroup>

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="139dp"
        android:layout_marginBottom="222dp"
        android:text="Submit" />

    <TextView
        android:id="@+id/result"
        android:layout_width="220dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="83dp"
        android:layout_marginBottom="93dp" />
</RelativeLayout>