<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity2">

    <TextView
        android:id="@+id/question2"
        android:layout_width="323dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="47dp"
        android:text="@string/question2"/>

    <RadioGroup
        android:id="@+id/radiogroup2"
        android:layout_width="327dp"
        android:layout_height="173dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="235dp" >

        <RadioButton
            android:id="@+id/opt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer2_1"/>

        <RadioButton
            android:id="@+id/opt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer2_2"/>

        <RadioButton
            android:id="@+id/opt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer2_3"/>
    </RadioGroup>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="139dp"
        android:layout_marginBottom="165dp"
        android:text="Next" />

    <TextView
        android:id="@+id/scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="159dp"
        android:layout_marginBottom="91dp" />
</RelativeLayout>